@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-19T01:55:20Z",
-  "count" : 2,
+  "timestamp" : "2022-10-02T08:21:55Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
+  "count_decinc" : [ -1, +2 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
