@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-02T01:51:57Z",
+  "timestamp" : "2022-10-02T08:21:55Z",
   "count_outdated" : 555,
   "uniques_outdated" : 320,
-  "count" : 590,
+  "count" : 589,
   "uniques" : 337,
   "clones" : [
     {
       "timestamp": "2022-09-18T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
