@@ -1,3 +1,11 @@
+2022-10-02T08:21:55Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3167878171
+* notice: last 14d: unq all: 4 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 320 555 / 337 590
+* notice: next accum: outdated-unq outdated-all / unq all: 320 555 / 337 589
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-09-18]
+
 2022-10-02T01:51:57Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3166940078
 * notice: last 14d: unq all: 4 35
